--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,8 @@ textarea {
 
 @font-face {
   font-family: "Inter";
-  src: url("Inter-Italic.woff2") format("woff2"),
-    url("Inter-Italic.woff") format("woff");
+  src: url("fonts/Inter-Italic.woff2") format("woff2"),
+    url("fonts/Inter-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -41,8 +41,8 @@ textarea {
 
 @font-face {
   font-family: "Inter";
-  src: url("Inter-Regular.woff2") format("woff2"),
-    url("Inter-Regular.woff") format("woff");
+  src: url("fonts/Inter-Regular.woff2") format("woff2"),
+    url("fonts/Inter-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -68,6 +68,7 @@ header {
 h1 {
   font-size: calc(1.5rem + 1vh);
   margin: 1em 1em 0;
+  text-align: center;
 }
 
 input {
@@ -75,19 +76,21 @@ input {
   border: 2px solid var(--border-color--);
   border-radius: 5px;
   font-size: calc(3rem + 1vh);
-  font-weight: bold;
+  font-weight: bolder;
   text-align: center;
   flex: 1 auto auto;
   width: 25vw;
   text-wrap: wrap;
   max-width: max-content;
   display: block;
+  padding: 0.125em 0 0.125em;
 }
 
 button {
   background-color: #ffffff;
   color: #3d3d3d;
   font-size: calc(1rem + 1vh);
+  font-weight: bold;
   margin-bottom: 2em;
   padding: 0.4em 1.5em;
   border: 1px solid #ffffff;
@@ -112,6 +115,7 @@ article {
   min-width: 90%;
   max-width: 90%;
   padding: 0.625em 1.25em;
+  border-top-left-radius: 5px;
 }
 
 article h2 {
@@ -123,4 +127,26 @@ article h2 {
 article p {
   font-size: calc(0.8rem + 0.5vh);
   margin: 0.5em auto 1em;
+}
+
+@media screen and (width > 40em) {
+  h1 {
+    font-size: calc(3rem + 1.5vh);
+  }
+
+  input {
+    font-size: calc(4rem + 1.5vh);
+  }
+
+  button {
+    font-size: calc(2rem + 1.5vh);
+  }
+
+  article h2 {
+    font-size: calc(2rem + 1vh);
+  }
+
+  article p {
+    font-size: calc(1.5rem + 1vh);
+  }
 }
